--- a/websynth/index.html
+++ b/websynth/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>NexusUI Demo</title>
+    <title>Websynth A1</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="js/nexusUI.js"></script>
